Content and listing alignment fixes

--- a/_src/sass/base/_base.scss
+++ b/_src/sass/base/_base.scss
@@ -104,7 +104,7 @@ mark {
 
 /* Blockquotes. */
 blockquote {
-    @include rem("margin", $line $gutter);
+    @include rem("margin", $line);
     @include font-size-leading("large");
     color: $text-color-quote;
 
@@ -157,14 +157,19 @@ hr {
     /* Leave more margin around text. */
     .content-section p,
     .content-section blockquote {
-        @include push-interior;
-        @include pull-interior;
+        @include push;
+        @include pull;
+    }
+
+    .content-section blockquote p {
+        margin-left: 0;
+        margin-right: 0;
     }
 
     /* Align lead outside the normal text margins. */
     .content-section .lead {
-        @include rem("padding-left",  $gutter);
-        @include rem("padding-right", $gutter);
+        margin-left: 0;
+        margin-right: 0;
     }
 
 } //include media-width(normal-size)
